# smartDropletsDataAdapters

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yaml
examples/: 00_setup_DAClient.py  01_create_model.py  02_upload_model.py  03_get_model_by_id.py  04_update_model.py  05_search_model.py  06_upsert_model.py  07_entity_locations.py
sd_data_adapter/: __init__.py  _version.py
sd_data_adapter/api/: __init__.py  misc.py  search.py  update.py  upload.py
sd_data_adapter/client/: __init__.py
sd_data_adapter/crud/: __init__.py  get.py  query.py  save.py  search.py  update.py  upload.py
sd_data_adapter/models/: README.md  __init__.py  smartDataModel.py
sd_data_adapter/models/agri_food/: __init__.py  agriCrop.py  agriFarm.py  agriParcel.py  agriParcelOperation.py  agriPest.py  agriProductType.py  agriSoil.py
sd_data_adapter/models/agrifood/: AgriCrop.py  AgriFarm.py  AgriParcel.py  AgriParcelOperation.py  AgriPest.py  AgriProduct.py  AgriProductType.py  AgriSoil.py  agriCrop.py  agriFarm.py  agriParcel.py  agriParcelOperation.py  agriPest.py  agriProductType.py  agriSoil.py
sd_data_adapter/models/autonomous_mobile_robot/: __init__.py  commandMessage.py  commandReturnMessage.py  stateMessage.py  stopCommandMessage.py  stopCommandReturnMessage.py
sd_data_adapter/models/device/: __init__.py  camera.py  device.py  deviceMeasurement.py  deviceModel.py  deviceOperation.py  privacyObject.py  (+1 more)
test/test_models/: ModelTests.py  ToDataClassTests.py  ToEntityTests.py  __init__.py  model.py  to_data_class.py  to_ngsild_entity.py
(+37 files in other folders)
